[fix] my name detail page back btn z-index

--- a/src/components/MyNameComp/MyNameDetail.module.scss
+++ b/src/components/MyNameComp/MyNameDetail.module.scss
@@ -22,6 +22,7 @@
     .back_button {
       width: 100%;
       margin: 1rem;
+      z-index: 5;
       svg {
         cursor: pointer;
       }
